JBTM-3509 Small optimisations in setting Transaction Timeout